--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,122 @@
-/* Add CSS styling here */
+/* Reset CSS styling here */
+html, body, div, span, applet, object, iframe,  
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,  
+a, abbr, acronym, address, big, cite, code,  
+del, dfn, em, img, ins, kbd, q, s, samp,  
+small, strike, strong, sub, sup, tt, var,  
+b, u, i, center,  
+dl, dt, dd, ol, ul, li,  
+fieldset, form, label, legend,  
+table, caption, tbody, tfoot, thead, tr, th, td,  
+article, aside, canvas, details, embed,  
+figure, figcaption, footer, header, hgroup,  
+menu, nav, output, ruby, section, summary,  
+time, mark, audio, video {  
+margin: 0;  
+padding: 0;  
+border: 0;  
+font-size: 100%;  
+font: inherit;  
+vertical-align: baseline;  
+}
+
+.main_container{
+    border-color: grey;
+    border-width: 1px;
+    border-style: solid;
+    padding:15px;
+}
+.header_and_nav{
+    padding-top: 25px;
+    padding-bottom: 25px;
+    background-color:#CCCCCC;
+}
+
+.header_and_nav > h1{
+    font-size:40px;
+    color:red;
+    padding-left: 10px;
+}
+.nav{
+    margin-top:15px;
+    text-align: left; 
+    padding-left: 10px;
+}
+.nav > a{
+    border-width: 1px;
+    border-style: solid;
+    border-color: green; 
+    padding:10px;
+    text-decoration: none;
+    }
+a:hover{
+    background-color: yellow;
+    color: red;
+}
+
+.name_and_picture_container{
+    margin-top: 10px;
+    display:flex;    
+    justify-content: space-between;
+}
+.picture{
+    width:46.70%;
+    height:300px;
+}
+.picture > img{
+    width:100%;
+    height:100%;
+}
+.name{
+    padding-top: 50px;
+    padding-left: 50px;
+    border:5px;
+    width:46.70%;
+   /* background-color:#CCCCCC;*/
+    box-sizing: border-box;
+}
+.name > h1, .footer > h1{
+    font-size: 24px;
+    margin-bottom: 5px;
+}
+.name > a, .footer >a {
+    border-width: 1px;
+    border-style: solid;
+    border-color: green;
+    padding:3px;        
+    margin-top:10px;
+    margin-bottom:10px;
+    text-decoration: none;
+}
+
+.name >p{
+    margin-top:10px;
+}
+.project_row1, .project_row2{
+    display:flex;
+    justify-content: space-between;
+    margin-top: 60px; 
+    margin-bottom: 60px; 
+
+}
+.project{
+    width:20%;
+    height:200px;
+    text-align: center;
+}
+.project > img{
+    width:100%;
+    height:100%;
+} 
+.project > img:hover{
+    width:110%;
+    height:110%;
+}
+.footer{
+    margin-top: 20px;
+    text-align: center;
+    padding:10px;
+    background-color:#CCCCCC;
+}
+ 
+
