--- a/style/index.css
+++ b/style/index.css
@@ -62,6 +62,7 @@ a:hover{
 .picture{
     width:46.70%;
     height:300px;
+    margin-top:15px;
 }
 .picture > img{
     width:100%;
@@ -71,6 +72,7 @@ a:hover{
     padding-top: 50px;
     padding-left: 50px;
     border:5px;
+    /*width:40px;*/
     width:46.70%;
    /* background-color:#CCCCCC;*/
     box-sizing: border-box;
@@ -78,6 +80,9 @@ a:hover{
 .name > h1, .footer > h1{
     font-size: 24px;
     margin-bottom: 5px;
+}
+.name >p{
+    text-align: justify;
 }
 .name > a, .footer >a {
     border-width: 1px;
